--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "haystacks-tt",
   "version": "0.0.1",
-  "description": "A simple Haystacks-async based command line typing tutor program for Windows, Mac & Linux",
-  "main": "./src/main.js",
+  "description": "A simple Haystacks-async based command line typing tutor program for Windows, Mac & Linux.",
+  "main": "./src/haystacks-tt.js",
+  "type": "module",
   "scripts": {
-    "start": "node ./src/main.js",
+    "start": "node ./src/haystacks-tt.js",
     "vers": "standard-version -m \"chore(release) version %s \"",
     "docs": "jsdoc -c jsdoc.json",
-    "test": "node ./src/main.js allApplicationValidations"
+    "test": "node ./src/haystacks-tt.js allApplicationValidations"
   },
   "repository": {
     "type": "git",
