projStart: Implement more functionality in support of the execution of a lesson and lesson instructions, lesson qualifications.

--- a/src/resources/configuration/application.system.json
+++ b/src/resources/configuration/application.system.json
@@ -30,5 +30,6 @@
   "system.logAllCommands": true,
   "system.enableUserCommandsLogClearing": true,
   "system.enableAllCommandsLogClearing": true,
-  "system.AppSetting": "TrunkMonkey"
+  "system.enableLessonPlanLimitingFactor": true,
+  "system.lessonPlanSuccessLimitingFactor": 90
 }
