--- a/package.json
+++ b/package.json
@@ -22,15 +22,17 @@
   "author": "Seth Hollingsead <iceversaka@hotmail.com>",
   "license": "MIT",
   "dependencies": {
-    "dotenv": "^16.0.0",
     "@haystacks/async": "0.2.0",
-    "@haystacks/constants": "0.2.0"
+    "@haystacks/constants": "0.2.0",
+    "chalk": "5.0.1",
+    "dotenv": "^16.0.0",
+    "play-sound": "^1.1.5"
   },
   "devDependencies": {
     "eslint": "^8.18.0",
     "jsdoc": "3.6.7",
-    "marked": ">=4.0.10",
     "markdown-it": ">=12.3.2",
+    "marked": ">=4.0.10",
     "standard-version": "9.3.2"
   },
   "bugs": {
