--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
   "dependencies": {
     "@haystacks/async": "0.2.0",
     "@haystacks/constants": "0.2.0",
+    "audio-generator": "^2.1.2",
+    "audio-through": "^2.0.0",
     "chalk": "5.0.1",
     "dotenv": "^16.0.0",
-    "play-sound": "^1.1.5"
+    "pcm-util": "^3.0.0",
+    "speaker": "^0.5.4"
   },
   "devDependencies": {
     "eslint": "^8.18.0",
