projStart: Add functions to compute lesson stats, and functions to store data containing lesson stats.

--- a/src/resources/configuration/application.system.json
+++ b/src/resources/configuration/application.system.json
@@ -31,5 +31,6 @@
   "system.enableUserCommandsLogClearing": true,
   "system.enableAllCommandsLogClearing": true,
   "system.enableLessonPlanLimitingFactor": true,
-  "system.lessonPlanSuccessLimitingFactor": 90
+  "system.lessonPlanSuccessLimitingAccuracy": 90,
+  "system.lessonPlanSuccessLimitingSpeed": 70
 }
