--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
   "type": "module",
   "scripts": {
     "start": "node ./src/haystacks-tt.js",
-    "deploy": "node ./build/buildRelease/src/buildRelease.js",
-    "release": "pkg package.json --out-path ./bin/",
+    "release": "node ./build/buildRelease/src/buildRelease.js",
+    "compile": "pkg package.json --out-path ./bin/",
     "vers": "standard-version -m \"chore(release) version %s \"",
     "docs": "jsdoc -c jsdoc.json",
     "test": "node ./src/haystacks-tt.js allApplicationValidations"
@@ -25,8 +25,8 @@
   "author": "Seth Hollingsead <iceversaka@hotmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@haystacks/async": ">=0.2.4",
-    "@haystacks/constants": ">=0.2.4",
+    "@haystacks/async": ">=0.2.5",
+    "@haystacks/constants": ">=0.2.5",
     "audio-generator": "^2.1.2",
     "audio-through": "^2.0.0",
     "chalk": "5.0.1",
