--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
   "author": "Seth Hollingsead <iceversaka@hotmail.com>",
   "license": "MIT",
   "dependencies": {
-    "@haystacks/async": ">=0.2.11",
-    "@haystacks/constants": ">=0.2.11",
+    "@haystacks/async": "^0.2.12",
+    "@haystacks/constants": "^0.2.14",
     "audio-generator": "^2.1.2",
     "audio-through": "^2.0.0",
     "chalk": "5.0.1",
